src/MiniC.java
/* Generated By:JJTree&JavaCC: Do not edit this line. MiniC.java */
import java.io.*;
import java.util.*;

/**  Analyseur lexico-syntaxique Mini-C */
public class MiniC/*@bgen(jjtree)*/implements MiniCTreeConstants, MiniCConstants {/*@bgen(jjtree)*/
  protected static JJTMiniCState jjtree = new JJTMiniCState();
  static private Result result = new Result();
  static private ArrayList<Variable> variables = new ArrayList<Variable>();
  static private int tempCount = 1 ;

  /** Main entry point. */
  public static void main(String args[]) throws ParseException {
      MiniC parser = null ; //new MiniC(System.in);
      try {
            parser = new MiniC (new FileInputStream("test.txt"));
            SimpleNode n = parser.Z();
            //n.dump("");
            result.printResult ("test");
      }
      catch (FileNotFoundException e) {
            System.out.println("File not found. Exiting.") ;
            System.exit(0) ;
      }
      catch(Exception e){
            System.out.println(e);
      }
  }
  static private String nextTemp (){
    String s = "TEMP"+Integer.toString(tempCount);
    tempCount ++;
    return s;
  }
  static private void checkVariable (Variable v){
    if (variables.contains(v)){
      result.addError("Identifier "+v.getName()+" already exists");
    }
    else {
      variables.add(v);
    }
  }
  static private String variableType (String name){
    String type = null ;
    for (Variable v : variables){
        if(v.getName().equals(name)){
            type = v.getType() ;
            break;
        }
    }

    if (type==null){
       result.addError("Identifier "+name+" not found");
    }
    return type;
  }
  static private String resultType (String type1, String type2){
    String type = null ;
    if (type1 !=null && type2 !=null){
       if (type1 =="float" || type2 == "float"){
              type = "float" ;
       }
       else {
              type = "int" ;
       }
    }
    else {
        result.addError("unrecognized identifier");
    }
    return type;
  }

  static boolean compatibleTypes(String type1, String type2){
    String intS = "int";
    String floatS = "float" ;
    if (type1.equals(intS) && type2.equals(floatS)){
        result.addError("Cannot assign float to int");
        return false;
    }
    if (type1 ==null || type2 ==null){
        result.addError("Unrecognized identifier");
        return false;
    }
    return true;
  }

  public static void incrementNum_quad() {Quadruplet.incrementNum_quad();}
  public static int getNum_quad() {
          return Quadruplet.getNum_quad();
  }

  static final public SimpleNode Z() throws ParseException {
 /*@bgen(jjtree) Z */
    SimpleNode jjtn000 = new SimpleNode(JJTZ);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Quadruplet q;
    try {
   System.out.println("heeere") ;
      Function();
      jj_consume_token(0);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    q = new Quadruplet ("STOP" , "", "", "");
    result.addQuad(q);
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void Function() throws ParseException {
 /*@bgen(jjtree) Function */
    SimpleNode jjtn000 = new SimpleNode(JJTFUNCTION);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token t;
    try {
      Type();
      jj_consume_token(IDENTIFIER);
      jj_consume_token(OPENB);
      ArgList();
      jj_consume_token(CLOSEB);
      CompoundStmt();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void ArgList() throws ParseException {
 /*@bgen(jjtree) ArgList */
  SimpleNode jjtn000 = new SimpleNode(JJTARGLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Arg();
      ArgListR();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void ArgListR() throws ParseException {
 /*@bgen(jjtree) ArgListR */
  SimpleNode jjtn000 = new SimpleNode(JJTARGLISTR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COLON:
        jj_consume_token(COLON);
        Arg();
        ArgListR();
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Arg() throws ParseException {
 /*@bgen(jjtree) Arg */
  SimpleNode jjtn000 = new SimpleNode(JJTARG);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String type;
  String name;
  Variable v;
  Token t;
    try {
      type = Type();
      t = jj_consume_token(IDENTIFIER);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
        name = t.image;
        v = new Variable(type,name);
        checkVariable (v);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public String Type() throws ParseException {
 /*@bgen(jjtree) Type */
    SimpleNode jjtn000 = new SimpleNode(JJTTYPE);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token t = null;
    try {
      t = jj_consume_token(TYPE);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return t.image;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void IdentList(String type) throws ParseException {
 /*@bgen(jjtree) IdentList */
    SimpleNode jjtn000 = new SimpleNode(JJTIDENTLIST);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);String name;
    Variable v;
    Token t = null;
    try {
      t = jj_consume_token(IDENTIFIER);
       name = t.image;
       v = new Variable(type,name);
       checkVariable (v);
      IdentListF(type);
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  static final public void IdentListF(String type) throws ParseException {
 /*@bgen(jjtree) IdentListF */
  SimpleNode jjtn000 = new SimpleNode(JJTIDENTLISTF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COLON:
        jj_consume_token(COLON);
        IdentList(type);
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  static final public void Stmt() throws ParseException {
 /*@bgen(jjtree) Stmt */
    SimpleNode jjtn000 = new SimpleNode(JJTSTMT);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);String type;
    Variable e1;
    Quadruplet q;
    int forI = -1;
    boolean c;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FOR:
        jj_consume_token(FOR);
        jj_consume_token(OPENB);
        e1 = Expr();
        jj_consume_token(SEMICOLON);
            int loopF = getNum_quad();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PlusMinus:
        case OPENB:
        case INT:
        case FLOAT:
        case IDENTIFIER:
          Expr();
          jj_consume_token(SEMICOLON);
                                c = true;
                                forI = getNum_quad();
                                incrementNum_quad();
          break;
        case SEMICOLON:
          jj_consume_token(SEMICOLON);
                                c = false;
          break;
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PlusMinus:
        case OPENB:
        case INT:
        case FLOAT:
        case IDENTIFIER:
          Expr();
          jj_consume_token(CLOSEB);
          Stmt();
          break;
        case CLOSEB:
          jj_consume_token(CLOSEB);
          Stmt();
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                      if (c){
                          q = new Quadruplet ( forI,"JZ" , "", "", Integer.toString(getNum_quad() + 1));
                          result.addQuad(q, forI);
                      }
                      q = new Quadruplet ("JMP" , "", "", Integer.toString(loopF));
                      result.addQuad(q);
        break;
      case WHILE:
        jj_consume_token(WHILE);
        jj_consume_token(OPENB);
            int loop = getNum_quad();
        e1 = Expr();
        jj_consume_token(CLOSEB);
            int ifI;
            ifI = getNum_quad();
            incrementNum_quad();
        Stmt();
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            if (e1.getType() != null){
                q = new Quadruplet ( ifI,"JZ" , "", "", Integer.toString(getNum_quad() + 1));
                result.addQuad(q, ifI);
                q = new Quadruplet ("JMP" , "", "", Integer.toString(loop));
                result.addQuad(q);
            }
        break;
      case IF:
        jj_consume_token(IF);
        jj_consume_token(OPENB);
        e1 = Expr();
        jj_consume_token(CLOSEB);
            int elseI, cont;
            ifI = getNum_quad();
            incrementNum_quad();
        Stmt();
            elseI = getNum_quad();
            if (e1.getType() != null){
                q = new Quadruplet ( ifI,"JZ" , "", "", Integer.toString(elseI + 1));
                result.addQuad(q, ifI);
            }
            incrementNum_quad();
        ElsePart(elseI);
        break;
      case OPENC:
        jj_consume_token(OPENC);
        A();
        break;
      case TYPE:
        type = Type();
        IdentList(type);
        jj_consume_token(SEMICOLON);
        break;
      case PlusMinus:
      case OPENB:
      case INT:
      case FLOAT:
      case IDENTIFIER:
        Expr();
        jj_consume_token(SEMICOLON);
        break;
      case SEMICOLON:
        jj_consume_token(SEMICOLON);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  static final public void ElsePart(int elseI) throws ParseException {
 /*@bgen(jjtree) ElsePart */
  SimpleNode jjtn000 = new SimpleNode(JJTELSEPART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSE:
        jj_consume_token(ELSE);
        Stmt();
                Quadruplet q = new Quadruplet ( elseI,"JMP" , "", "", Integer.toString(getNum_quad()));
                result.addQuad(q, elseI);
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  static final public void CompoundStmt() throws ParseException {
 /*@bgen(jjtree) CompoundStmt */
  SimpleNode jjtn000 = new SimpleNode(JJTCOMPOUNDSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OPENC);
      A();
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  static final public void A() throws ParseException {
 /*@bgen(jjtree) A */
  SimpleNode jjtn000 = new SimpleNode(JJTA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PlusMinus:
      case TYPE:
      case SEMICOLON:
      case FOR:
      case WHILE:
      case IF:
      case OPENB:
      case OPENC:
      case INT:
      case FLOAT:
      case IDENTIFIER:
        StmtList();
        jj_consume_token(CLOSEC);
        break;
      case CLOSEC:
        jj_consume_token(CLOSEC);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  static final public void StmtList() throws ParseException {
 /*@bgen(jjtree) StmtList */
  SimpleNode jjtn000 = new SimpleNode(JJTSTMTLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Stmt();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PlusMinus:
      case TYPE:
      case SEMICOLON:
      case FOR:
      case WHILE:
      case IF:
      case OPENB:
      case OPENC:
      case INT:
      case FLOAT:
      case IDENTIFIER:
        StmtList();
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  static final public Variable Expr() throws ParseException {
 /*@bgen(jjtree) Expr */
    SimpleNode jjtn000 = new SimpleNode(JJTEXPR);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);String name ;
    String type;
    Variable v, r;
    Token t = null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        t = jj_consume_token(IDENTIFIER);
           name = t.image;
           type = variableType(name);
           v = new Variable (type,name);
        r = ExprR(v);
         jjtree.closeNodeScope(jjtn000, true);
         jjtc000 = false;
          {if (true) return r;}
        break;
      case PlusMinus:
      case OPENB:
      case INT:
      case FLOAT:
        r = Rvalue();
         jjtree.closeNodeScope(jjtn000, true);
         jjtc000 = false;
          {if (true) return r;}
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
    throw new Error("Missing return statement in function");
  }
